# AMD-PACE

./: LICENSE  NOTICE  README.md  build_requirements.txt  pyproject.toml  requirements.txt  runtime_requirements.txt  setup.py
benchmarks/llm/accuracy/: arguments.py  datastructs.py  evaluation.py  evaluation_config_gpt_oss_bbh.json  lm_model.py
benchmarks/llm/correctness/: runners.py
benchmarks/llm/performance/: benchmark_llm_offline.py  data.py
benchmarks/llm/performance/mlperf/: SUT_PACE_async.py
benchmarks/slab/: README.md  analyze_blocksize_autotune.py  analyze_slab_results.py  bench_slab_blocksize.py  bench_slab_layout_blocksize.py  combine_perf_results.py  parse_perf_stat.py  run_blocksize_perf_cases.py  run_blocksize_uprof_pcm_cases.py  select_blocksize_perf_cases.py  slurm_build_and_quick.sbatch  slurm_setup_venv.sbatch  slurm_slab_blocksize_perf.sbatch  slurm_slab_blocksize_perf_selected.sbatch  slurm_slab_blocksize_sweep.sbatch  slurm_slab_blocksize_uprof_pcm_selected.sbatch  slurm_slab_perf.sbatch  slurm_slab_perf_sweep.sbatch  slurm_slab_sweep.sbatch  summarize_perf_autotune.py
benchmarks/slab/results/: slab_quick_6960.csv  slab_sweep_6961.csv  slab_sweep_6962.csv
benchmarks/slab/results/analysis_6961/: summary.md  winners.csv
benchmarks/slab/results/blocksize/: blocksize_sweep_6976.csv  blocksize_sweep_6977.csv  blocksize_sweep_6978.csv  blocksize_sweep_6979.csv  slurm-6977-blocksize.err
benchmarks/slab/results/blocksize/analysis_6978/: blocksize_rule.csv  decisions.csv  summary.md  validation.csv
benchmarks/slab/results/blocksize/analysis_6979/: blocksize_rule.csv  decision_report.md  decisions.csv  selected_perf_cases_6979.csv  summary.md  validation.csv
benchmarks/slab/results/blocksize_perf_selected/: perf_comparison_6981.md  selected_perf_6981.csv
benchmarks/slab/results/blocksize_perf_selected/raw_6981/: 000_decode_strong_short_llama_best_decode_llama_gqa_b16_s512_exit0p0_bs16.latency.csv  000_decode_strong_short_llama_best_decode_llama_gqa_b16_s512_exit0p0_bs16.perf.csv  000_decode_strong_short_llama_heuristic_decode_llama_gqa_b16_s512_exit0p0_bs64.latency.csv  000_decode_strong_short_llama_heuristic_decode_llama_gqa_b16_s512_exit0p0_bs64.perf.csv  001_decode_strong_medium_mha_best_decode_mha_b16_s2048_exit0p25_bs16.latency.csv  001_decode_strong_medium_mha_best_decode_mha_b16_s2048_exit0p25_bs16.perf.csv  001_decode_strong_medium_mha_heuristic_decode_mha_b16_s2048_exit0p25_bs128.latency.csv  001_decode_strong_medium_mha_heuristic_decode_mha_b16_s2048_exit0p25_bs128.perf.csv  002_decode_strong_long_llama_best_decode_llama_gqa_b1_s8192_exit0p25_bs256.latency.csv  002_decode_strong_long_llama_best_decode_llama_gqa_b1_s8192_exit0p25_bs256.perf.csv  002_decode_strong_long_llama_heuristic_decode_llama_gqa_b1_s8192_exit0p25_bs64.latency.csv  002_decode_strong_long_llama_heuristic_decode_llama_gqa_b1_s8192_exit0p25_bs64.perf.csv  003_mtd_strong_short_llama_best_mtd_llama_gqa_b1_s128_exit0p5_bs16.latency.csv  007_top_stable_win_best_decode_mha_b16_s512_exit0p0_bs16.perf.csv  (+32 more)
benchmarks/slab/results/blocksize_uprof_pcm_selected/: selected_uprof_pcm_6989.csv
benchmarks/slab/results/perf/: mtd_block_major_bs16_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6967_bench.csv  mtd_block_major_bs16_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6967_perf.csv  mtd_block_major_bs16_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6967_perf_raw.csv  mtd_block_major_bs16_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6964_bench.csv  mtd_block_major_bs16_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6964_perf.csv  mtd_block_major_bs16_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6964_perf_raw.csv  mtd_block_major_bs256_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6968_bench.csv  mtd_block_major_bs256_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6968_perf.csv  mtd_block_major_bs256_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6968_perf_raw.csv  mtd_block_major_bs256_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6965_bench.csv  mtd_block_major_bs256_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6965_perf.csv  mtd_block_major_bs256_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6965_perf_raw.csv  mtd_head_major_bs16_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6966_bench.csv  mtd_head_major_bs16_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6966_perf.csv  mtd_head_major_bs16_b16_s8192_llama_gqa_32_8_128_exit0.5_schedauto_6966_perf_raw.csv  mtd_head_major_bs16_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6963_bench.csv  mtd_head_major_bs16_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6963_perf.csv  mtd_head_major_bs16_b16_s8192_slm_gqa_8_4_64_exit0.5_schedauto_6963_perf_raw.csv
benchmarks/slab/results/perf_sweeps/: perf_sweep_6969.csv
cmake/: BuildAOCLDLP.cmake  BuildFBGEMM.cmake  BuildJITBackend.cmake
csrc/: CMakeLists.txt
csrc/core/: core_ops.cpp
csrc/ops/: slab_attention.cpp
csrc/ops/kernels/: fused_rope.h  fused_rope_avx512.cpp
demos/: pace_server_speculative_demo.py  server_chat_demo.py
docs/: Contributing.md  CoreFunctions.md  InferenceServer.md  LLM.md  MLPerf.md  Ops.md  PYPI_README.md  Plugin.md
examples/: pace_gpt-oss_chat.ipynb  pace_llm_basic.py  pace_llm_pard.py  pace_llm_streamer.py  pace_sarvam_translate_quickstart.ipynb  pace_server_basic.py  playbook_server.ipynb  playbook_server_speculative.ipynb
pace/: __init__.py  _register_fake.py  core.py
pace/llm/: generator.py  llm.py  speculative.py  stopping_criteria.py
pace/llm/attention/paged/: backend.py  cache.py  ops.py  utils.py
pace/llm/models/: gemma3.py  gpt_oss.py  gptj.py  hf_utils.py  llama.py  qwen2.py
pace/server/engine/: README.md  frontend.py  server.py  utils.py
pace/server/router/: __init__.py  engine_client.py  frontend.py  metrics.py  protocol.py  request_handler.py  scheduler.py  streaming.py  tokenizer_utils.py  utils.py
pace/utils/: worker.py
tests/llm_infra/: test_paged_cache.py  test_speculative.py
tests/ops/: test_AOCLDLPLinear.py  test_paged_attention.py
tests/server/engine/: README.md  test_engine.py
tests/server/router/: test_router.py  test_scheduler.py
(+71 files in other folders)
